<resources>
    <string name="qchat_close">关闭</string>
    <string name="qchat_save">保存</string>
    <string name="qchat_cancel">取消</string>
    <string name="qchat_create">创建</string>
    <string name="qchat_sure">确定</string>
    <string name="qchat_ensure">确认</string>
    <string name="qchat_leave">退出</string>
    <string name="qchat_delete">删除</string>
    <string name="qchat_edit">编辑</string>
    <string name="qchat_complete">完成</string>
    <string name="qchat_delete_server">删除社区</string>
    <string name="qchat_delete_server_content">确定删除当前社区？</string>
    <string name="qchat_leave_server_content">确定退出当前社区？</string>
    <string name="qchat_leave_server">退出社区</string>
    <string name="qchat_roles">身份组</string>
    <string name="qchat_roles_count">身份组（%s）</string>
    <string name="qchat_member">成员</string>
    <string name="qchat_permission">权限</string>
    <string name="qchat_server_topic_hint">输入主题</string>
    <string name="qchat_server_name_hint">输入名称</string>
    <string name="qchat_server_topic">社区主题</string>
    <string name="qchat_server_name">社区名称</string>
    <string name="qchat_server_setting">社区设置</string>
    <string name="qchat_nickname">昵称</string>
    <string name="qchat_edit_nickname">编辑昵称</string>
    <string name="qchat_click_edit_and_edit_nickname">点击编辑修改昵称</string>
    <string name="qchat_kick_someone">踢除%s</string>
    <string name="qchat_kick_someone_title">踢除成员</string>
    <string name="qchat_forbid_someone">屏蔽%s</string>
    <string name="qchat_server_id">ID:%d</string>
    <string name="qchat_content_null">无</string>
    <string name="qchat_identifies_name">身份组名称</string>
    <string name="qchat_member_manager">成员管理</string>
    <string name="qchat_modify_member">修改成员</string>
    <string name="qchat_add_member">添加成员</string>
    <string name="qchat_common_permission">通用权限</string>
    <string name="qchat_manager_server">管理社区</string>
    <string name="qchat_manage_role">管理角色</string>
    <string name="qchat_manage_channel_property">管理所有话题属性</string>
    <string name="qchat_modify_self_server_member">修改自己社区成员信息</string>
    <string name="qchat_modify_other_server_member">修改他人社区成员信息</string>
    <string name="qchat_invite_others_enter_server">邀请他人进入server权限</string>
    <string name="qchat_more_with_all">更多 (共%d个)</string>
    <string name="qchat_pack_up_with_all">收起 (共%d个)</string>
    <string name="qchat_plz_input_role_name">请输入身份组名称</string>
    <string name="qchat_role_delete">删除身份组</string>
    <string name="qchat_role_delete_one_role">确认删除“%s”身份组吗？</string>
    <string name="qchat_role_sort">身份组排序</string>
    <string name="qchat_delete_member">移除成员</string>
    <string name="qchat_sort">排序</string>
    <string name="qchat_select">选择</string>
    <string name="qchat_sure_with_num">确定(%d)</string>
    <string name="qchat_role_sort_ruler">你只能管理比自己最高身份更低的身份组</string>
    <string name="qchat_everyone_role_ruler">所有社区成员默认权限</string>
    <string name="qchat_delete_some_member">确认要移除“%s”成员吗？</string>
    <string name="qchat_delete_topic_content">确认要移除“%s”吗？</string>
    <string name="qchat_selector_none_tip">请选择用户</string>
    <string name="qchat_message_permission">消息权限</string>
    <string name="qchat_send_message">发送消息</string>
    <string name="qchat_send">发送</string>
    <string name="qchat_send_quick_comment">发送快捷评论</string>
    <string name="qchat_thread_replay">Thread 回复</string>
    <string name="qchat_at_permission">\t@权限</string>
    <string name="qchat_manage_message">管理消息</string>
    <string name="qchat_check_history_message">查看历史消息</string>
    <string name="qchat_delete_other_msg">所有话题中删除他人消息</string>
    <string name="qchat_revoke_other_msg">所有话题撤回他人消息</string>
    <string name="qchat_at_anyone_permission">\@任意人的权限</string>
    <string name="qchat_at_all_permission">\@所有人的权限</string>
    <string name="qchat_at_role_permission">\@身份组</string>
    <string name="qchat_member_permission">成员权限</string>
    <string name="qchat_kick_other">踢除他人</string>
    <string name="qchat_kick_member">踢除成员</string>
    <string name="qchat_forbid_other">封禁他人</string>
    <string name="qchat_change_other_nickname">变更他人昵称</string>
    <string name="qchat_create_new_role_group">创建新身份组</string>
    <string name="qchat_update_member_empty_nick_tip">昵称不能为空</string>
    <string name="qchat_update_server_empty_name_tip">名称不能为空</string>
    <string name="qchat_create_role_empty_name_tip">身份组名称不能为空</string>
    <string name="qchat_message_revoke_over_time">已超过时间无法撤回</string>
    <string name="qchat_permission_deny_tips">您拒绝了权限申请，该功能将无法使用</string>
    <string name="qchat_permission_default">请在设置页面添加相关权限</string>
    <string name="qchat_permission_camera">请在设置页面添加相机权限</string>
    <string name="qchat_permission_audio">请在设置页面添加麦克风权限</string>
    <string name="qchat_permission_storage">请在设置页面添加读写手机存储权限</string>
    <string name="qchat_fragment_no_server_tip">暂无社区，\n赶紧去添加心仪的社区吧</string>
    <string name="qchat_create_title">创建社区</string>
    <string name="qchat_crate_close">关闭</string>
    <string name="qchat_crate_by_self">自己创建</string>
    <string name="qchat_crate_by_other">加入别人社区</string>
    <string name="qchat_crate_by_self_announce">创建公告频道</string>
    <string name="qchat_crate_by_other_announce">加入公告频道</string>
    <string name="qchat_crate_upload_portrait">上传头像</string>
    <string name="qchat_crate_tip">创建</string>
    <string name="qchat_join_error_title">无法加入？</string>
    <string name="qchat_join_error_desc">你被该社区封禁，无法加入</string>
    <string name="qchat_join_error_ok">知道了</string>
    <string name="qchat_search_no_tip">暂无你要的社区ID</string>
    <string name="qchat_search_tip">搜索社区ID</string>
    <string name="qchat_take_photo">拍照</string>
    <string name="qchat_get_from_album">从相册选择</string>
    <string name="qchat_input_server_name">请输入社区名称</string>
    <string name="qchat_msg_channel">消息话题</string>
    <string name="qchat_no_Channel_with_server">该社区下暂无话题</string>
    <string name="qchat_server_state_joined">已加入</string>
    <string name="qchat_server_state_join">加入</string>
    <string name="qchat_server_state_applied">已申请</string>
    <string name="qchat_server_had_appled_tip">请求已发送</string>
    <string name="qchat_server_member_invite_tip">邀请信息已发送</string>
    <string name="qchat_server_photo_crop">裁剪</string>
    <string name="qchat_server_channel_name_fix">话题%s</string>
    <string name="qchat_server_request_fail">操作失败</string>
    <string name="qchat_server_request_exception">社区异常</string>
    <string name="qchat_network_error">当前网络错误</string>
    <string name="qchat_user_cancel">用户取消</string>
    <string name="qchat_network_error_tip">当前网络不可用，请检查你的网络设置</string>
    <string name="qchat_server_name_empty_error">社区名称不能为空</string>
    <string name="qchat_announce_member_title">订阅者管理</string>
    <string name="qchat_announce_manager_title">管理员管理</string>
    <string name="qchat_announce_action_remove">移除</string>
    <string name="qchat_channel_setting_title">话题设置</string>
    <string name="qchat_channel_create_title">创建新话题</string>
    <string name="qchat_announce_channel_setting_title">频道设置</string>
    <string name="qchat_channel_channel_name">话题名称</string>
    <string name="qchat_channel_channel_name_hint">设置名称</string>
    <string name="qchat_channel_topic">话题主题</string>
    <string name="qchat_channel_topic_hint">请设置主题</string>
    <string name="qchat_channel_permission_title">权限</string>
    <string name="qchat_channel_permission_setting">权限设置</string>
    <string name="qchat_channel_names_list">名单</string>
    <string name="qchat_channel_white_name_list">白名单</string>
    <string name="qchat_channel_black_name_list">黑名单</string>
    <string name="qchat_channel_delete">删除话题</string>
    <string name="qchat_channel_type">话题类型</string>
    <string name="qchat_channel_type_public">公开</string>
    <string name="qchat_channel_type_private">私密</string>
    <string name="qchat_channel_delete_dialog_title">确定删除此话题？</string>
    <string name="qchat_channel_delete_error">话题删除失败</string>
    <string name="qchat_channel_update_error">话题修改失败</string>
    <string name="qchat_channel_update_empty_error">话题名称不能为空</string>
    <string name="qchat_channel_message_copy_success">消息复制成功</string>
    <string name="qchat_channel_name_empty_error">话题名称不能为空</string>
    <string name="qchat_channel_create_error">话题创建失败</string>
    <string name="qchat_channel_create_error_count_limit">数量超限</string>
    <string name="qchat_channel_fetch_error">获取话题失败</string>
    <string name="qchat_channel_fetch_role_error">获取话题身份组失败</string>
    <string name="qchat_channel_add_role_title">添加身份组</string>
    <string name="qchat_fetch_role_error">获取身份组失败</string>
    <string name="qchat_add_role_error">添加身份组失败</string>
    <string name="qchat_add_role_error_not_found">身份组不存在</string>
    <string name="qchat_add_role_error_exist">身份组已添加</string>
    <string name="qchat_channel_add_member_title">添加成员</string>
    <string name="qchat_channel_fetch_member_error">获取话题成员失败</string>
    <string name="qchat_channel_add_member_error">添加成员失败</string>
    <string name="qchat_channel_add_member_error_not_found">成员不存在</string>
    <string name="qchat_channel_add_member_error_exist">成员已添加</string>
    <string name="qchat_channel_add_member_empty">暂无成员</string>
    <string name="qchat_member_selector_max_count">最多选择%d人</string>
    <string name="qchat_role_list_title">身份组</string>
    <string name="qchat_member_list_title">成员</string>
    <string name="qchat_more_title">查看更多(共%s个)</string>
    <string name="qchat_channel_role_delete_title">移除身份组</string>
    <string name="qchat_channel_role_delete_content">确定要移除身份组%s吗？</string>
    <string name="qchat_channel_member_delete_title">移除成员</string>
    <string name="qchat_channel_member_delete_content">确定要移除成员%s吗？</string>
    <string name="qchat_no_permission">暂无权限</string>
    <string name="qchat_no_permission_content">暂无权限在该话题发言</string>
    <string name="qchat_announce_role_manager">管理员</string>
    <string name="qchat_announce_role_owner">创建者</string>
    <string name="qchat_channel_role_delete_error">身份组删除失败</string>
    <string name="qchat_channel_member_delete_error">成员删除失败</string>
    <string name="qchat_channel_member_add_error">成员添加失败</string>
    <string name="qchat_role_permission_title">%s权限设置</string>
    <string name="qchat_role_permission_general_title">通用权限</string>
    <string name="qchat_role_permission_role_member_title">成员权限</string>
    <string name="qchat_role_permission_channel_attr">管理话题属性</string>
    <string name="qchat_role_permission_manager_member">管理话题名单</string>
    <string name="qchat_role_permission_channel_check">查看话题</string>
    <string name="qchat_role_permission_channel_permission">管理话题权限</string>
    <string name="qchat_role_permission_message_permission">消息权限</string>
    <string name="qchat_role_permission_delete_other_message">话题中删除他人消息</string>
    <string name="qchat_role_permission_rollback_other_message">话题撤回他人消息</string>
    <string name="qchat_role_permission_at_others">\@任意人的权限</string>
    <string name="qchat_role_permission_at_all">\@所有人的权限</string>
    <string name="qchat_channel_permission_send_message">发送消息</string>
    <string name="qchat_channel_permission_send_comment">发送快捷评论</string>
    <string name="qchat_channel_permission_thread_reply">Thread回复</string>
    <string name="qchat_channel_permission_at">\@权限</string>
    <string name="qchat_announcement_read_only_tips">该频道为只读</string>
    <string name="qchat_announcement_member_page_title">编辑 %s</string>
    <string name="qchat_announcement_member_permission">权限列表</string>
    <string name="qchat_announcement_member_send_message">发消息</string>
    <string name="qchat_announcement_member_delete_message">删除他人消息</string>
    <string name="qchat_announcement_member_edit_channel">编辑频道信息</string>
    <string name="qchat_announcement_member_edit_subscribe">管理订阅者</string>
    <string name="qchat_announcement_member_edit_emoji">管理表情评论</string>
    <string name="qchat_announcement_member_remove">移除管理员</string>
</resources>