<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2022 NetEase, Inc. All rights reserved.
  ~ Use of this source code is governed by a MIT license that can be
  ~ found in the LICENSE file.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <TextView
        android:id="@+id/tvCreateTitle"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/qchat_create_title"
        android:textColor="@color/color_333333"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tvClose"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/qchat_crate_close"
        android:textColor="@color/color_333333"
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginStart="-20dp"
        android:layout_marginEnd="-20dp"
        android:background="@color/color_e9eff5"
        app:layout_constraintTop_toBottomOf="@id/tvCreateTitle" />

    <TextView
        android:id="@+id/tvCreateSelf"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_60_dp"
        android:layout_marginTop="@dimen/dimen_30_dp"
        android:background="@drawable/bg_shape_qchat_create_item"
        android:drawableStart="@drawable/ic_create"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawablePadding="@dimen/dimen_16_dp"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dimen_16_dp"
        android:paddingEnd="@dimen/dimen_16_dp"
        android:text="@string/qchat_crate_by_self"
        android:textColor="@color/color_333333"
        android:textSize="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvCreateTitle"
        tools:ignore="SpUsage" />


    <TextView
        android:id="@+id/tvJoinOther"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_60_dp"
        android:layout_marginTop="@dimen/dimen_16_dp"
        android:background="@drawable/bg_shape_qchat_create_item"
        android:drawableStart="@drawable/ic_join"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawablePadding="@dimen/dimen_16_dp"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dimen_16_dp"
        android:paddingEnd="@dimen/dimen_16_dp"
        android:text="@string/qchat_crate_by_other"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/dimen_16_dp"
        app:layout_constraintTop_toBottomOf="@id/tvCreateSelf"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tvCreateSelfAnnounce"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_60_dp"
        android:layout_marginTop="@dimen/dimen_16_dp"
        android:background="@drawable/bg_shape_qchat_create_item"
        android:drawableStart="@drawable/ic_create_announce"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawablePadding="@dimen/dimen_16_dp"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dimen_16_dp"
        android:paddingEnd="@dimen/dimen_16_dp"
        android:text="@string/qchat_crate_by_self_announce"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/dimen_16_dp"
        app:layout_constraintTop_toBottomOf="@id/tvJoinOther"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tvJoinOtherAnnounce"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_60_dp"
        android:layout_marginTop="@dimen/dimen_16_dp"
        android:background="@drawable/bg_shape_qchat_create_item"
        android:drawableStart="@drawable/ic_join_announce"
        android:drawableEnd="@drawable/ic_arrow_right"
        android:drawablePadding="@dimen/dimen_16_dp"
        android:gravity="center_vertical"
        android:paddingStart="@dimen/dimen_16_dp"
        android:paddingEnd="@dimen/dimen_16_dp"
        android:text="@string/qchat_crate_by_other_announce"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/dimen_16_dp"
        app:layout_constraintTop_toBottomOf="@id/tvCreateSelfAnnounce"
        tools:ignore="SpUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>