<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 NetEase, Inc. All rights reserved.
  ~ Use of this source code is governed by a MIT license that can be
  ~ found in the LICENSE file.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_eff1f4">


    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="26dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/ic_arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/tvSave"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/qchat_save"
        android:textColor="@color/color_337eff"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/dimen_20_dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:text="@string/qchat_announcement_member_page_title"
        android:textColor="@color/color_333333"
        android:textSize="16dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:ellipsize="end"
        tools:ignore="SpUsage"
        android:singleLine="true" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:overScrollMode="never"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="20dp">

            <View
                android:id="@+id/viewInfoBg"
                android:layout_width="0dp"
                android:layout_height="92dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_qchat_white_round"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_marginStart="11dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="16dp"
                android:gravity="center_vertical|start"
                android:singleLine="true"
                android:textColor="@color/color_333333"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="@id/viewInfoBg"
                app:layout_constraintStart_toEndOf="@id/ivIcon"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SpUsage" />

            <com.netease.yunxin.kit.common.ui.widgets.ContactAvatarView
                android:id="@+id/ivIcon"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="@id/viewInfoBg"
                app:layout_constraintTop_toTopOf="@id/tvName" />


            <TextView android:id="@+id/tvMsgTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qchat_announcement_member_permission"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/text_size_12"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintTop_toBottomOf="@id/viewInfoBg"
                app:layout_constraintStart_toStartOf="parent"
                android:maxLines="1"
                android:ellipsize="end"
                tools:ignore="MissingConstraints" />

            <View
                android:id="@+id/viewMsgSettingBg"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_qchat_white_round"
                app:layout_constraintBottom_toBottomOf="@id/tvEmoji"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvMsgTitle" />

            <TextView
                android:id="@+id/tvSendMessage"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical|start"
                android:text="@string/qchat_announcement_member_send_message"
                android:textColor="@color/color_333333"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="@id/viewMsgSettingBg"
                app:layout_constraintStart_toStartOf="@id/viewMsgSettingBg"
                app:layout_constraintTop_toTopOf="@id/viewMsgSettingBg"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swSendMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:thumb="@drawable/switch_thumb_selector"
                app:layout_constraintBottom_toBottomOf="@id/tvSendMessage"
                app:layout_constraintEnd_toEndOf="@id/viewMsgSettingBg"
                app:layout_constraintTop_toTopOf="@id/tvSendMessage"
                app:track="@drawable/switch_track_selector" />

            <View
                android:id="@+id/viewSendMessageLine"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginStart="16dp"
                android:background="@color/color_f5f8fc"
                app:layout_constraintEnd_toEndOf="@id/viewMsgSettingBg"
                app:layout_constraintStart_toStartOf="@id/viewMsgSettingBg"
                app:layout_constraintTop_toBottomOf="@id/tvSendMessage" />

            <TextView
                android:id="@+id/tvEdit"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical|start"
                android:text="@string/qchat_announcement_member_edit_channel"
                android:textColor="@color/color_333333"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="@id/viewMsgSettingBg"
                app:layout_constraintStart_toStartOf="@id/viewMsgSettingBg"
                app:layout_constraintTop_toBottomOf="@id/tvSendMessage"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:thumb="@drawable/switch_thumb_selector"
                app:layout_constraintBottom_toBottomOf="@id/tvEdit"
                app:layout_constraintEnd_toEndOf="@id/viewMsgSettingBg"
                app:layout_constraintTop_toTopOf="@id/tvEdit"
                app:track="@drawable/switch_track_selector" />

            <TextView
                android:id="@+id/tvDelete"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical|start"
                android:text="@string/qchat_announcement_member_delete_message"
                android:textColor="@color/color_333333"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="@id/viewMsgSettingBg"
                app:layout_constraintStart_toStartOf="@id/viewMsgSettingBg"
                app:layout_constraintTop_toBottomOf="@id/tvEdit"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:thumb="@drawable/switch_thumb_selector"
                app:layout_constraintBottom_toBottomOf="@id/tvDelete"
                app:layout_constraintEnd_toEndOf="@id/viewMsgSettingBg"
                app:layout_constraintTop_toTopOf="@id/tvDelete"
                app:track="@drawable/switch_track_selector" />

            <TextView
                android:id="@+id/tvSubscribe"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical|start"
                android:text="@string/qchat_announcement_member_edit_subscribe"
                android:textColor="@color/color_333333"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="@id/viewMsgSettingBg"
                app:layout_constraintStart_toStartOf="@id/viewMsgSettingBg"
                app:layout_constraintTop_toBottomOf="@id/tvDelete"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swSubscribe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:thumb="@drawable/switch_thumb_selector"
                app:layout_constraintBottom_toBottomOf="@id/tvSubscribe"
                app:layout_constraintEnd_toEndOf="@id/viewMsgSettingBg"
                app:layout_constraintTop_toTopOf="@id/tvSubscribe"
                app:track="@drawable/switch_track_selector" />

            <TextView
                android:id="@+id/tvEmoji"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_vertical|start"
                android:text="@string/qchat_announcement_member_edit_emoji"
                android:textColor="@color/color_333333"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="@id/viewMsgSettingBg"
                app:layout_constraintStart_toStartOf="@id/viewMsgSettingBg"
                app:layout_constraintTop_toBottomOf="@id/tvSubscribe"
                tools:ignore="SpUsage" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swEmoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:thumb="@drawable/switch_thumb_selector"
                app:layout_constraintBottom_toBottomOf="@id/tvEmoji"
                app:layout_constraintEnd_toEndOf="@id/viewMsgSettingBg"
                app:layout_constraintTop_toTopOf="@id/tvEmoji"
                app:track="@drawable/switch_track_selector" />

            <TextView
                android:id="@+id/tvQuit"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/bg_qchat_white_round"
                android:gravity="center"
                android:text="@string/qchat_announcement_member_remove"
                android:textColor="@color/color_e6605c"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/viewMsgSettingBg"
                tools:ignore="SpUsage" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>