<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2022 NetEase, Inc. All rights reserved.
  ~ Use of this source code is governed by a MIT license that can be
  ~ found in the LICENSE file.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/color_white">

    <com.netease.yunxin.kit.qchatkit.ui.message.input.QChatMessageBottomLayout
        android:id="@+id/q_chat_message_bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <TextView
        android:id="@+id/q_chat_message_bottom_tips"
        android:layout_width="match_parent"
        android:layout_height="102dp"
        android:background="@color/color_eff1f4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/color_656a72"
        android:text="@string/qchat_announcement_read_only_tips"
        android:textSize="@dimen/text_size_16"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/dimen_12_dp"
        android:visibility="gone"
        android:clickable="false"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView android:id="@+id/networkTip"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:background="@color/color_fee3e6"
        android:gravity="center"
        android:text="@string/qchat_network_error_tip"
        android:textColor="@color/color_fc596a"
        android:textSize="14dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="-12dp"
        android:layout_marginEnd="-12dp"
        android:visibility="gone"
        tools:ignore="SpUsage" />

    <FrameLayout android:id="@+id/q_chat_message_list_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/q_chat_message_bottom_layout"
        app:layout_constraintTop_toBottomOf="@id/networkTip">

        <com.netease.yunxin.kit.qchatkit.ui.message.view.QChatMessageListView
            android:id="@+id/q_chat_message_list_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCopyTip"
        android:layout_width="wrap_content"
        android:elevation="@dimen/dimen_4_dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="@dimen/dimen_70_dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:paddingStart="@dimen/dimen_20_dp"
            android:paddingEnd="@dimen/dimen_20_dp"
            android:drawablePadding="@dimen/dimen_5_dp"
            android:layout_width="wrap_content"
            android:textSize="@dimen/text_size_16"
            android:background="@drawable/bg_shape_invite_member_tip"
            android:textColor="@color/color_333333"
            android:text="@string/qchat_channel_message_copy_success"
            android:gravity="center_vertical"
            android:layout_height="@dimen/dimen_55_dp"
            app:drawableStartCompat="@drawable/ic_ok_green"
            tools:ignore="SpUsage" />
    </androidx.cardview.widget.CardView>

    <com.netease.yunxin.kit.qchatkit.ui.common.widget.QChatVisitorTipView
        android:id="@+id/viewQChatVisitor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginBottom="89dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>